# Kanade

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
core/: CMakeLists.txt
core/include/spotify/: spotify_client.h
core/include/utils/: load_file.h  pkce.h
core/src/spotify/: spotify_client.cpp
core/src/utils/: load_file.cpp  pkce.cpp
